turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:3: error: value leveBrosse is not a member of Unit
    setCouleurBrosse(Color.white);baisseBrosse()leveBrosse()
                                                ^